--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 numpy>=1.16.2
-torch>=1.0.1.post2
+--find-links https://download.pytorch.org/whl/cu113/torch_stable.html
+torch>=1.0.1.post2+cu113
 torchgeometry>=0.1.2
 PyYAML==5.1.1
 configargparse
@@ -7,4 +8,5 @@ smplx
 pillow
 opencv-python
 tqdm
--e git+https://github.com/nghorbani/human_body_prior#egg=human_body_prior
+human-body-prior
+#-e git+https://github.com/nghorbani/human_body_prior#egg=human_body_prior
